--- a/example/course-resources/fork/images-index.yaml
+++ b/example/course-resources/fork/images-index.yaml
@@ -49,3 +49,9 @@ asset_index:
     illustrate-stage-file-to-index: commit-files-separately@illustrate-stage-file-to-index.gif
     hint-click-stage-all: commit-files-separately@hint-click-stage-all.png
     clicked-stage-all: commit-files-separately@clicked-stage-all.png
+
+# commit-file-modification
+    unstaged-modified-file-in-changes-tab: commit-file-modification@unstaged-modified-file-in-changes-tab.png
+    compare-new-and-modified-file-status-icon: commit-file-modification@compare-new-and-modified-file-status-icon.png
+    introduce-changes-tab-file-diff: commit-file-modification@introduce-changes-tab-file-diff.png
+    illustrate-stage-modified-file: commit-file-modification@illustrate-stage-modified-file.png
