--- a/example/course-resources/fork/level-data/intro-open-repository-index.yaml
+++ b/example/course-resources/fork/level-data/intro-open-repository-index.yaml
@@ -7,7 +7,7 @@ asset_index:
     file-1:v1:
       content of file1
     file-1:v2:
-      content of file1 v2
+      1號檔案第2版
 
     file-2:v1:
       content of file2
