--- a/example/course-resources/fork/levels-index.yaml
+++ b/example/course-resources/fork/levels-index.yaml
@@ -6,14 +6,15 @@ asset_index:
     main.section-create-commits.name: "第二章：建立版本歷史與檔案狀態"
 
   # level names of section one
-    main.intro-install.name: "第一節：安裝"
-    main.intro-open-repository.name: "第二節：使用 fork 開啟資料夾"
-    main.browse-history.name: "第三節：瀏覽版本歷史"
-    main.checkout-revision.name: "第四節：切換工作樹版本"
+    main.intro-install.name: "1-1 節：安裝"
+    main.intro-open-repository.name: "1-2 節：使用 fork 開啟資料夾"
+    main.browse-history.name: "1-3 節：瀏覽版本歷史"
+    main.checkout-revision.name: "104 節：切換工作樹版本"
 
   # level names of section two
-    main.commit-one-file.name: "第一節：快照一個檔案"
-    main.commit-files-separately.name: "第二節：分批快照檔案"
+    main.commit-one-file.name: "2-1 節：快照一個檔案"
+    main.commit-files-separately.name: "2-2 節：分批快照檔案"
+    main.commit-file-modification.name: "2-3 節：快照檔案修改"
     
   ondisk:
   # level configs of section one: intro
@@ -25,4 +26,5 @@ asset_index:
   # level configs of section two: create commits
     commit-one-file: "commit-one-file.yaml"
     commit-files-separately: "commit-files-separately.yaml"
+    commit-file-modification: "commit-file-modification.yaml"
     
