--- a/example/course-resources/fork/level-data/commit-files-separately-index.yaml
+++ b/example/course-resources/fork/level-data/commit-files-separately-index.yaml
@@ -89,9 +89,10 @@ asset_index:
       相對的，圖(六)呈現實際上 git 的情況，存在一個中間的暫存區  
       左邊的${{t/work-tree}}下面同樣有一白一黃兩個檔案  
       不一樣的是，${{t/work-tree}}和${{t/repo}}之間多出了一個暫存區  
-
+      我們可以想像它是我們工作中的資料夾的一份複製品，只不過是被放在了一個一般看不見也摸不到的地方  
+      
       當我們建立${{t/repo}}的一個新版本時，內容的來源是來自於暫存區而非${{t/work-tree}}  
-      因為圖(六)中暫存區裡只有白色檔案，最後建立的${{t/revision}}只有白色而沒有白色檔案  
+      因為圖(六)中暫存區裡只有白色檔案，最後建立的${{t/revision}}只有白色而沒有黃色檔案  
       我們賦予新增的${{t/revision}}白色的外觀來代表這個事實  
 
       實際上，圖(六)所發生的就正是剛才我們做的事情：  
@@ -108,7 +109,7 @@ asset_index:
       在英文的文本中我們會見到幾個其它的用詞被交替使用，例如：cache, stage  
       為了避免混淆，在往後的章節中，我們統一使用**${{t/index}}**  
       
-      接下來，讓我們繼續藉由將 new2 保存到${{t/repo}}來詳細解說如何控制**${{t/index}}**的內容
+      接下來，讓我們繼續藉由將 new2 保存到${{t/repo}}來詳細解說如何修改**${{t/index}}**的內容
 
     stage-second: |+2
       .md
@@ -121,7 +122,11 @@ asset_index:
       .md
       現在， new2 已經存在於${{t/index}}之中了  
 
-      我們是怎麼把 new2 放入${{t/index}}的呢？就是透過剛才操作的按鈕，**${{t/stage-f}}**  
+      回想一下前不久我們提到，${{t/index}}是${{t/work-tree}}的複製品，只不過放在了另一個地方  
+      當我們修改${{t/work-tree}}裡的檔案的時候，${{t/index}}裡面的檔案會保持原狀，不會發生變化  
+      直到我們想要把在資料夾中新增的檔案保存到新的${{t/revision}}時，需要將這個檔案放進${{t/index}}才可以  
+
+      我們是怎麼把 new2 放入${{t/index}}的呢？其實就是透過剛才操作的按鈕，**${{t/stage-f}}**  
       因此，我們知道${{t/stage}}的意思，就是把檔案從${{t/work-tree}}放入${{t/index}}  
       下面用動態圖圖(七)說明了這一操作  
 
