--- a/example/course-resources/fork/level-data/commit-file-deletion-index.yaml
+++ b/example/course-resources/fork/level-data/commit-file-deletion-index.yaml
@@ -106,9 +106,79 @@ asset_index:
       所以，裡面我們可以想像裡面擺放了非常多份過往資料夾的複製品  
       那麼，${{t/staged}}具體來說是${{t/index}}和**哪一份**複製品的差異呢？  
 
-      
-      
+      用單純的想法來思考，通常會認為這裡${{t/index}}比較的對象是${{t/repo}}中保存的**最近**的一份${{t/file-tree}}  
+      但現實世界是殘酷的，並沒有如此單純  
+      實際上，身為 git 的使用者，我們可以指定要和哪一個${{t/repo}}進行比較  
+      這個被選中的版本，稱作**${{t/head-f}}**  
 
+      知道了${{t/head}}的存在後  
+      我們就可以理解${{t/staged}}實際上是呈現了${{t/index}}和${{t/head}}所擁有的${{t/file-tree}}之間的差異  
+      正如下圖所呈現：  
 
+      ![illustration]({{images/concept-show-staged-files}})  
+      <div class="img-title">圖(七)</div>  
+
+    more-on-head: |+2
+      .md
+      既然介紹到了${{t/head}}，這裡稍微附帶一提  
+      「head」本身沒有常見的中文翻譯，直譯的話會叫做「頭」，不是很好懂  
+      這裡是以實際上的效果與性質賦予${{t/head}}的譯名  
+
+      正如前面提到的，${{t/head}}指定了${{t/repo}}中的一個${{t/file-tree}}  
+      而在像我們目前練習用的 git ${{t/repo}}中，它通常會指到${{t/graph}}上最新的一個${{t/file-tree}}  
+      但這裡要注意，這只是因為目前練習用的${{t/repo}}構造簡單才有這樣的結果  
+      實際上在多數的情況，${{t/head}}是無法這樣簡單判斷位置的  
+      而我們在後面也會介紹如何改動${{t/head}}的位置  
+
+      現在，就先讓我們繼續完成將「刪除檔案」的版本紀錄到${{t/repo}}的任務吧～  
+
+    commit: |+2
+      .md
+      請按照先前所學，以「`${{level-data/commit-file-deletion/commit-msg}}`」作為提交訊息  
+      建立新的${{t/revision}}  
+
+    warn-deleted-still-saved: |+2
+      .md
+      恭喜，我們成功將「刪除檔案」這個抽象的狀態保存成${{t/repo}}中的一個新${{t/revision}}！  
+
+      這邊要稍微岔題，強調一件非常重要、與個人隱私以及資訊安全有關的事情  
+
+      在我們將「1」這個文件刪除，並且把這個狀態保存進${{t/repo}}之後  
+      這份檔案看起來像是從資料夾之中刪除了一樣，但是實際上**它還存在於${{t/repo}}**之中  
+      事實上，我們現在也還可以透過前面學過的技巧，瀏覽刪除它之前的${{t/revision}}的${{t/file-tree}}  
+      在先前的${{t/revision}}中，我們依然可以看到它的內容  
+
+      也就是說，「被刪除的檔案」，現在依然確確實實的存在於我們的電腦中  
+
+      或許有點違反我們以往使用電腦的經驗，但其實這樣的性質正是 git 存在的價值：  
+      當我們誤刪或修改了某個檔案，感到後悔的時候，可以將它原封不動的復原  
+      它是一個讓我們可以後悔重來的工具
+
+      因此，請千千萬萬要牢記  
+      任何有關個人隱私、重要機密的資訊  
+      除非有妥善的加密過，否則**永遠不要將它交託 git 管理**  
+      **永遠不要將隱私和機密交託 git 管理**  
+      **永遠不要將隱私和機密交託 git 管理**  
+
+      因為一旦放進去，就很難把它給完全抹除  
+
+    summary: |+2
+      .md
+      在最後稍微提了沉重的話題  
+      現在，就讓我們轉換心情，歸納一下這個章節學到的內容吧  
+
+      在這個章節，我們學習了如何將「刪除檔案」這個狀態保存到${{t/repo}}中  
+      我們藉著這個非常熟練的操作  
+      順帶的探明了「${{t/unstaged}}」其實是列舉出${{t/work-tree}}和${{t/index}}的差異  
+      以及「${{t/staged}}」是列舉出${{t/index}}和特定的一版${{t/file-tree}}的差異  
+      而這個特定的一版，就是「${{t/head}}」所指定的  
+
+      到目前為止，我們已經非常熟悉如何在工作的資料夾中修改檔案  
+      然後把修改的內容，放進${{t/index}}再保存到${{t/repo}}這樣一連串的過程  
+      這整個修改的傳遞，是以${{t/work-tree}} → ${{t/index}} → ${{t/repo}} 這樣單向流動  
+      既然前面提到，git 是可以讓我們後悔重來的工具，那麼這個流動是否也可以因為後悔而反轉過來呢？  
+
+      答案當然是肯定的！我們將在緊接而來的章節裡面學習如何逆轉這一切！
 
 # course materials
+    commit-msg: "刪除檔案"
