--- a/example/course-resources/fork/level-data/commit-file-deletion-index.yaml
+++ b/example/course-resources/fork/level-data/commit-file-deletion-index.yaml
@@ -11,7 +11,7 @@ asset_index:
     delete-one: |+2
       .md
       首先，我們要先從資料夾中找出一個可憐的犧牲品來刪除  
-      請使用檔案管理員開啟位於「`#{basic}`」的資料夾  
+      請使用檔案管理員開啟位於「`#{{basic}}`」的資料夾  
       然後刪除其中的「1」這個文字文件  
 
       完成後，請按下「執行」來進行檢查
@@ -21,7 +21,7 @@ asset_index:
       在把檔案刪除後，按照慣例就是要將這個變化${{t/stage}}  
       在核選前，讓我們先觀察一下${{t/gui}}的${{st/changes-tab}}吧  
 
-      請使用${{t/gui}}開啟位於「`#{basic}`」的資料夾  
+      請使用${{t/gui}}開啟位於「`#{{basic}}`」的資料夾  
       然後切換到${{st/changes-tab}}  
 
     introduce-deletion-mark: |+2
@@ -32,7 +32,7 @@ asset_index:
       <div class="img-title">圖(一)</div>  
 
       眼尖的人會發現，紅框圈選的區塊中又出現了以前沒見過的紅色圖標標示出被刪除的檔案  
-      沒錯，既新增與修改兩種狀態後，${{t/gui}}的介面會使用不一樣的圖標標記被刪除的檔案  
+      沒錯，繼新增與修改兩種狀態後，${{t/gui}}的介面會使用不一樣的圖標標記被刪除的檔案  
       結合之前見過的兩種圖標，我們這就收集到了三種圖標  
 
       下面的圖(二)整理了目前所見到的三個圖標以及對應的檔案狀態：  
@@ -43,7 +43,8 @@ asset_index:
     explain-unstaged-files: |+2
       .md
       現在讓我們想一件有趣的事情：  
-      在我們把「1」這個檔案從資料夾之中刪除之後 git 是如何知道「1」曾經存在過，並且把它列在${{t/unstaged}}中的呢？  
+      在我們把「1」這個檔案從資料夾之中刪除之後  
+      git 是如何知道「1」曾經存在過，並且把它列在${{t/unstaged}}中的呢？  
       它都已經被刪除了！  
 
       為了解答這個問題，讓我們看一下下面的圖(三)
@@ -72,7 +73,7 @@ asset_index:
       ![illustration]({{images/concept-show-unstaged-files}})  
       <div class="img-title">圖(四)</div>  
 
-      從上圖中，可以看到在${{t/work-tree}}和${{t/index}}之間出現了**${{t/unstaged-f}}**  
+      從上圖中，可以看到在${{t/work-tree}}和${{t/index}}之間出現了橘框的**${{t/unstaged-f}}**  
       裡面的內容，正好就是被我們刪除的檔案  
       而其它所有沒有修改的檔案，就不會出現在這個列表之中  
 
@@ -84,7 +85,7 @@ asset_index:
       <div class="img-title">圖(五) (同圖(一))</div>  
 
       現在，我們終於了解${{t/unstaged}}和${{t/index}}之間的微妙關係了：  
-      它列舉了所有可以從${{t/work-tree}}${{t/stage}}進入${{t/index}}的檔案變化  
+      前者列舉了所有可以從${{t/work-tree}}${{t/stage}}進入${{t/index}}的檔案變化  
       接下來，就讓我們繼續將被刪除的檔案${{t/commit-s}}${{t/revision}}到${{t/repo}}中保存  
       
     stage-deleted: |+2
@@ -100,15 +101,15 @@ asset_index:
       <div class="img-title">圖(六)</div>  
 
       正如${{t/unstaged}}是${{t/work-tree}}與${{t/index}}的差異  
-      我們使用**${{t/staged-f}}**來稱呼${{t/index}}與${{t/repo}}的差異...嗯？  
+      我們使用**${{t/staged-f}}**來稱呼「${{t/index}}」與「${{t/repo}}」的差異...嗯？  
 
       我們回想一下，${{t/repo}}是用來稱呼 git 存放保留下來的**眾多**過往資料夾版本的地方  
-      所以，裡面我們可以想像裡面擺放了非常多份過往資料夾的複製品  
+      所以，我們可以想像裡面擺放了非常多份過往資料夾的複製品  
       那麼，${{t/staged}}具體來說是${{t/index}}和**哪一份**複製品的差異呢？  
 
       用單純的想法來思考，通常會認為這裡${{t/index}}比較的對象是${{t/repo}}中保存的**最近**的一份${{t/file-tree}}  
       但現實世界是殘酷的，並沒有如此單純  
-      實際上，身為 git 的使用者，我們可以指定要和哪一個${{t/repo}}進行比較  
+      實際上， git 是讓身為使用者的我們可以**自由地指定**${{t/index}}要和哪一個${{t/revision}}進行比較  
       這個被選中的版本，稱作**${{t/head-f}}**  
 
       知道了${{t/head}}的存在後  
@@ -118,14 +119,23 @@ asset_index:
       ![illustration]({{images/concept-show-staged-files}})  
       <div class="img-title">圖(七)</div>  
 
+      上圖最右側，我們用**綠色標簽**元件來代表**${{t/head}}**  
+      因為它指向了${{t/repo}}中的白色${{t/revision}}  
+      我們把白色${{t/revision}}還有它所包含的白色資料夾－－${{t/file-tree}}都用綠色虛線框選起來  
+
+      如此一來，綠色框線代表目前${{t/head}}所包含的內容  
+      同時，也就是${{t/index}}用來比較的基準  
+      結果就是，我們在${{t/index}}和綠色框線之間看到了橘色圓角框的**${{t/staged}}**  
+
     more-on-head: |+2
       .md
       既然介紹到了${{t/head}}，這裡稍微附帶一提  
       「head」本身沒有常見的中文翻譯，直譯的話會叫做「頭」，不是很好懂  
       這裡是以實際上的效果與性質賦予${{t/head}}的譯名  
 
-      正如前面提到的，${{t/head}}指定了${{t/repo}}中的一個${{t/file-tree}}  
-      而在像我們目前練習用的 git ${{t/repo}}中，它通常會指到${{t/graph}}上最新的一個${{t/file-tree}}  
+      正如前面提到的，${{t/head}}指定了${{t/repo}}中的一個${{t/revision}}  
+      而在像我們目前練習用的 git ${{t/repo}}中，它通常會指到${{t/graph}}上最新的一個${{t/revision}}  
+
       但這裡要注意，這只是因為目前練習用的${{t/repo}}構造簡單才有這樣的結果  
       實際上在多數的情況，${{t/head}}是無法這樣簡單判斷位置的  
       而我們在後面也會介紹如何改動${{t/head}}的位置  
@@ -175,7 +185,7 @@ asset_index:
 
       到目前為止，我們已經非常熟悉如何在工作的資料夾中修改檔案  
       然後把修改的內容，放進${{t/index}}再保存到${{t/repo}}這樣一連串的過程  
-      這整個修改的傳遞，是以${{t/work-tree}} → ${{t/index}} → ${{t/repo}} 這樣單向流動  
+      這整個修改的傳遞，是以${{t/work-tree}} → ${{t/index}} → ${{t/repo}}這樣單向流動  
       既然前面提到，git 是可以讓我們後悔重來的工具，那麼這個流動是否也可以因為後悔而反轉過來呢？  
 
       答案當然是肯定的！我們將在緊接而來的章節裡面學習如何逆轉這一切！
