Add new level: undo-staging

--- a/example/course-resources/fork/levels-index.yaml
+++ b/example/course-resources/fork/levels-index.yaml
@@ -16,6 +16,7 @@ asset_index:
     main.commit-files-separately.name: "2-2 節：分批快照檔案"
     main.commit-file-modification.name: "2-3 節：快照檔案修改"
     main.commit-file-deletion.name: "2-4 節：快照檔案刪除"
+    main.undo-staging.name: "2-5 節：復原暫存"
     
   ondisk:
   # level configs of section one: intro
@@ -29,4 +30,5 @@ asset_index:
     commit-files-separately: "commit-files-separately.yaml"
     commit-file-modification: "commit-file-modification.yaml"
     commit-file-deletion: "commit-file-deletion.yaml"
+    undo-staging: "undo-staging.yaml"
     
