Extend WriteFileAction tests: test for creating path automatically and translate destination path via AssetLoader

--- a/test/resources/action-executor/resources/write-file-index.yaml
+++ b/test/resources/action-executor/resources/write-file-index.yaml
@@ -2,6 +2,7 @@ asset_index:
   infile:
     inFile1: 'inFile1 raw content'
     inFile2: 'inFile2 raw content'
+    translated-path: '神秘的路徑.txt'
   ondisk:
     manyFiles1: "many-files-1.txt"
     manyFiles2: "many-files-2.txt"
