--- a/example/course-resources/fork/images-index.yaml
+++ b/example/course-resources/fork/images-index.yaml
@@ -63,3 +63,10 @@ asset_index:
     concept-show-unstaged-files: commit-file-deletion@concept-show-unstaged-files.png
     staged-deleted-file-in-changes-tab: commit-file-deletion@staged-deleted-file-in-changes-tab.png
     concept-show-staged-files: commit-file-deletion@concept-show-staged-files.png
+
+# undo-staging
+    staged-one-dirty-one-unwanted: undo-staging@staged-one-dirty-one-unwanted.png
+    instruct-unstage-unwanted: undo-staging@instruct-unstage-unwanted.png
+    illustrate-unstaged-unwanted: undo-staging@illustrate-unstaged-unwanted.png
+    concept-before-unstage-unwanted: undo-staging@concept-before-unstage-unwanted.png
+    concept-after-unstage-unwanted: undo-staging@concept-after-unstage-unwanted.png
