--- a/example/course-resources/fork/level-data/undo-staging-index.yaml
+++ b/example/course-resources/fork/level-data/undo-staging-index.yaml
@@ -23,7 +23,7 @@ asset_index:
 
     stage-all: |+2
       .md
-      透過剛剛的步驟，目前的資料夾中有一個新增的檔案「新檔案五」以及被修改的檔案  
+      透過剛剛的步驟，目前的資料夾中有一個新增的檔案「不想要」以及被修改的檔案  
 
       現在，請使用${{t/gui}}開啟位於「`#{{basic}}`」的資料夾，並且開啟${{st/changes-tab}}  
       將這些改變全部${{t/stage}}，加入${{t/staged}}名單  
