--- a/example/resources/course/fork.yaml
+++ b/example/resources/course/fork.yaml
@@ -43,7 +43,11 @@
           nameKey: "levels/main.commit-file-deletion.name"
           configAssetId: "levels/commit-file-deletion"
         - !level 
-          id: "form-main-undo-staging"
+          id: "fork-main-undo-staging"
           nameKey: "levels/main.undo-staging.name"
           configAssetId: "levels/undo-staging"
+        - !level 
+          id: "fork-main-discard-changes"
+          nameKey: "levels/main.discard-changes.name"
+          configAssetId: "levels/discard-changes"
 
