Update course content

--- a/example/course-resources/fork/level-data/discard-changes-index.yaml
+++ b/example/course-resources/fork/level-data/discard-changes-index.yaml
@@ -39,7 +39,73 @@ asset_index:
       因為我們的目的就是要捨棄變更，所以請按下上圖紅框圈選的「Discard」 (捨棄)按鈕  
 
       完成之後，請按下「執行」按鈕進行檢查
-    
 
+    explain-discard: |+2
+      .md
+      現在，我們成功的把「不想要」這份檔案給徹底捨棄  
+      如果打開位於「`#{{basic}}`」的資料夾，應該會發現他已經完全消失不留痕跡  
+
+      但是，捨棄變更就必然表示會將檔案給刪除嗎？  
+      這樣子跟我們直接將檔案刪除有任何差別嗎？  
+
+      為了回答這個疑問，讓我們繼續把殘留下來的「3.txt」的修改給捨棄  
+
+    confirm-modified-content: |+2
+      .md
+      在繼續進行之前，請先打開「3.txt」，觀察他目前的檔案內容，方便等下進行比較  
+
+      請問他目前的檔案內容是下列何者：
+      1. 三原色RGB
+      2. 歲寒三友松竹梅
+      2. ${{level-data/undo-staging/modify-3}}
+
+      請以數字(1/2/3)回答
+
+    discard-modified: |+2
+      .md
+      現在，請按照剛才所教過的步驟，將「3.txt」的變更捨棄  
+      完成後，請按下「執行」來檢查
+
+    remind-file-restored-from-index: |+2
+      .md
+      我們現在已經成功將「3.txt」的修改給捨棄  
+      如果去打開資料夾觀察，會發現「3.txt」依然存在於資料夾中  
+      因此，剛才我們的疑問「捨棄是否等同刪除？」現在已經可以得到解答  
+      實際上，他們是不同的，否則「3.txt」就被刪除了  
+
+      更準確地說  
+      當我們捨棄「不想要」這個被新增的檔案時，得到的結果是整個檔案消失不見，感覺就像是刪除檔案一樣  
+      但是我們捨棄「3.txt」時，得到的結果是從${{t/index}}中取回了它被修改前的樣貌，這是刪除檔案無法帶來的效果  
+
+      我們可以進一步開啟資料夾中的「3.txt」來加以檢驗  
+
+    check-content-of-3: |+2
+      .md
+      請開啟位於「`#{{basic}}`」的「3.txt」，並且回答目前它的檔案內容是下列何者：  
+
+      1. content of file3
+      2. ${{level-data/undo-staging/modify-3}}
+      
+      請以數字(1/2)回答  
+
+    explain-discard-3: |+2
+      .md
+      如果注意前面兩次觀察「3.txt」的內容得到的結果  
+      我們會發現捨棄變更之後，「3.txt」的內容發生了變化  
+      具體來說是回到了修改前的狀態  
+      這也就證明了捨棄變更的效果  
+
+    summary: |+2
+      .md
+      在這一章節中，我們學會了如何將不想要的變更給捨棄  
+      也了解到了所謂的「捨棄變更」，其實就是將${{t/index}}中保存的檔案狀態覆蓋回${{t/work-tree}}之中  
+
+      至此為止，我們完整的學習了從${{t/work-tree}}，經過${{t/index}}，直到${{t/repo}}的檔案流向  
+      也就是${{t/commit-s}}${{t/revision}}
+      也學習了完全相反的逆流的方向  
+      也就是復原暫存還有捨棄變更  
+
+      而這些操作，其實又跟我們在第一章中學習的瀏覽版本歷史是互相關聯的  
+      至於如何有關，就讓我們在下一章節中再見分曉～
 
 # course materials
