Use remove file action to remove untracked file

--- a/example/course-resources/fork/levels/discard-changes.yaml
+++ b/example/course-resources/fork/levels/discard-changes.yaml
@@ -15,9 +15,8 @@
       needConfirm: false
     - !dev.needAction 
       actions:
-        - !dev.act.git 
-          repoSetupName: basic
-          arguments: [ "checkout", "--", "$level-data/undo-staging/unwanted-path-in-basic" ]
+        - !act.removeFile 
+          targetPaths: ["$level-data/undo-staging/unwanted-path"]
     - !verifyRepo 
       referenceName: "discard-unwanted-file"
 
